--- a/homework5/src/components/MovieCard/MovieCard.css
+++ b/homework5/src/components/MovieCard/MovieCard.css
@@ -25,6 +25,7 @@
   line-height: 1.5;
   margin: 5px;
 }
+
 .link {
   font-size: 16px;
   line-height: 1.5;
@@ -34,6 +35,17 @@
   text-decoration: inherit;
 }
 .link:hover{
+  color:  #888ef9;
+}
+.link-genre{
+  font-size: 16px;
+  line-height: 1.5;
+
+  font-weight: 500;
+  color: #232df9;
+  text-decoration: inherit;
+}
+.link-genre:hover{
   color:  #888ef9;
 }
 .rating-section {
